--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,6 +32,14 @@
             "type": "coreclr",
             "request": "attach",
             "processId":"${command:pickProcess}"
+        },
+        {
+            "type": "pwa-chrome",
+            "request": "launch",
+            "name": "Connecting People",
+            "url": "http://localhost:4200/",
+            "webRoot": "${workspaceFolder}"
         }
+    
     ]
 }
