--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,6 +5,8 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+  "strictNullChecks": true,
     "strictPropertyInitialization": false,
     "strict": true,
     "noImplicitReturns": true,
